# flarevm

./: Cargo.toml  README.md
src/: bytecode.rs  cli.rs  error.rs  macros.rs  main.rs  stack.rs  string_pool.rs  utils.rs  virtual_machine.rs  vm.rs  vm_info.rs
src/components/: bytecode.rs  error.rs  mod.rs  registers.rs
src/network/shared/: packet.rs
src/utils/: hex.rs
