[package]
name = "flarevm"
version = "0.1.0"
edition = "2021"
authors = ["Nicholas Stienz <nickstienz@gmail.com>"]
license = "MIT"
description = "A VM written in Rust"
repository = "https://github.com/nickstienz/flarevm"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
